--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^19.0.0-rc-f994737d14-20240522",
     "react-dom": "^19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.5.0",
     "react-medium-image-zoom": "^5.2.9",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
